recursion.logo.square.FourSquare.scala.error
Compilation error:
FourSquare:3: error: not enough arguments for method gauche: (x$1: Double)Unit.
Unspecified value parameter x$1.
  gauche()
        ^FourSquare:5: error: not enough arguments for method gauche: (x$1: Double)Unit.
Unspecified value parameter x$1.
  gauche()
        ^FourSquare:6: error: not enough arguments for method avance: (x$1: Double)Unit.
Unspecified value parameter x$1.
  avance()
        ^